Description
Please check SelectClipRgnTest.zip and region-type.png
.
SelectClipRgn function seems like checking the clip box.
This affects gdi32_apitest:OffsetClipRgn tests.
Attachments
Issue Links
- relates to
-
CORE-16626 Regression, MediaPlayer Classic MPC HC 1.7.13, part of the GUI is not drawn at all, is transparent
-
- Resolved
-
-
CORE-16680 Regression: our Solitaire and Spider Solitaire have a transparent background with VBox Guest Additions installed
-
- Resolved
-
-
CORE-16644 Regression, Firefox 3.6.28 drop-down-menu, blue selection-rectangle stops drawing when hovering specific items
-
- Resolved
-