[GDI] Fixup attribute support for Regions

Start to fix CORE-13817 when GDI batch is turn on for SelectClipRgn.